Fix Bug: Create internship button runs off screen on mobile
- Add media queries to CSS to fix display bug

#3091

--- a/assets/styles/app/pages/_search.scss
+++ b/assets/styles/app/pages/_search.scss
@@ -437,8 +437,15 @@ padding: $size-default $size-default $size-M $size-default;
       color: $color-base;
       box-shadow: inset 0 0 0 2px $color-base;
       background-color: transparent;
-      position: absolute;
-      margin: 1.5rem;
+
+      @include media($ML-down) {
+        width: auto;
+      }
+
+      @include media($ML) {
+        position: absolute;
+        margin: $size-default;
+      }
     }
 
     .usa-button.usa-button-secondary.add-internship:hover {
